# AdventOfCode

./: .gitignore  AdventOfCode.sln
2015/14/cpp/: CMakeLists.txt  README.markdown
2015/14/cpp/include/: reindeer.h
2015/14/cpp/src/: main.cpp  reindeer.cpp
2015/15/cpp/: CMakeLists.txt  README.markdown
2015/15/cpp/include/: ingredient.h
2015/15/cpp/src/: ingredient.cpp  main.cpp
2016/: board.py  day1.py  day10.py  day12.py  day13grid.py  day14.py  day15.py  day16.py  day17.py  day18.py  day19.py  day2.py  day20.py  day21.py  day3.py  day4.py  day5.py  day6.py  day7.py  day8.py  day9.py  direction.py  grid.py  input.py  pyproject.toml  test_board.py  test_day7.py  test_direction.py
2019/: README.md
2019/01/: README.md  solution.rb
2019/02/: README.md  solution.c
2022/aoc2022/: build.sbt
2023/: _template.py  day01.py  day02.py  day03.py  day04.py  day05.py  day06.py  day07.py  day08.py  day09.py  input.py  main.py
2024/: 01.xlsx  day02.py  day10.py  day11.py  day2.py  day3.py  day4.py  day5.py  day6.py  day7.py  day8.py  day9.py  input.py  pyproject.toml
2025/: Cargo.toml
2025/benches/: benchmarks.rs
2025/input/2016/: day23.in
2025/src/: assembunny.rs  dag.rs  day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  day09.rs  day10.rs  dial.rs  lib.rs  main.rs  solver.rs  tile.rs  utilities.rs
2025/src/year2015/: day17.rs  day18.rs  mod.rs
2025/src/year2016/: day12.rs  day22.rs  day23.rs  mod.rs
2025/src/year2020/: day02.rs  day03.rs
2025/src/year2023/: day05.rs  mod.rs
2025/src/year2025/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  day09.rs  day10.rs  day11.rs  day12.rs
scala/2015/01/: build.sbt
scala/aoc/: .scalafmt.conf  build.sbt
src/AdventOfCode02/: AdventOfCode02.xproj  Program.cs
src/AdventOfCode03/: AdventOfCode03.xproj  Program.cs
(+76 files in other folders)
