[project]
name = "aoc2016"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pytest>=8.3.4",
    "ruff>=0.8.2",
]

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
    # naming
    "N",
    # comprehensions
    "C4",
    # pytest
    "PT",
    # ruff-specific
    "RUF",
    # annotations
    "ANN",
]