[package]
name = "aoc"
version = "1.0.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
color-eyre = "0.6.5"
good_lp = { version = "1.14.2", default-features = false, features = ["highs"] }
itertools = "0.14.0"
paste = "1.0.15"
regex = "1.12.2"

[dev-dependencies]
criterion = "0.8"

[[bench]]
name = "benchmarks"
harness = false
